syntax = "proto2";

package llsf_msgs;

import "Team.proto";

option java_package = "org.robocup_logistics.llsf_msgs";
option java_outer_classname = "PrsTaskProtos";

message PrsTask {
    enum CompType {
        COMP_ID = 5006;
        MSG_TYPE = 701;
    }
    // Color of the team
    required Team teamColor = 1;
    required uint32 taskId  = 2;
    required uint32 robotId = 3;

    // result of the execution from the robot
    optional ExecutionResult executionResult = 4;
    optional bool holdProduct = 5;

    optional ReportAllMachinesTask reportAllMachinesTask = 6;
    optional ExploreMachineAtWaypointTask exploreMachineAtWaypointTask = 7;
    optional GetWorkPieceTask getWorkPieceTask = 8;
    //optional PrepareCapTask prepareCapTask = 9;
    //optional DisposeWorkPieceTask disposeWorkPieceTask = 10;
    optional DeliverWorkPieceTask deliverWorkPieceTask = 11;

    optional SendPrepareMachineTask sendPrepareMachineTask = 12;

    // set true to stop all the robots
    optional bool stopRobot = 13;

    optional bool cancelTask = 14;

    optional MoveToWayPointTask moveToWayPointTask = 15;

    enum ExecutionResult {
        SUCCESS = 1;
        FAIL    = 2;
	    ABORTED = 3;
        BUSY   = 4;
    }
}

// Instructs the Teamserver to send a preparemachine
message SendPrepareMachineTask {
    required bool machine_configured = 1;
}

// Move to the given machine if known in TF or to the zone otherwhise and explore the machine there
message ExploreMachineAtWaypointTask {
    required string machine = 1;
    required string side    = 2;
    required string zoneId  = 3;
}

// Send all observations to the team server
message ReportAllMachinesTask {
    required bool report    = 1;
}

// Get a workpiece at the given station and hold the product in the gripper
message GetWorkPieceTask {
    required string providing_station = 1;
    required string providing_type = 2;
    optional string shelfslide = 3;
}

// Deliver the product in the gripper to the given station
message DeliverWorkPieceTask {
    required string delivered_station = 1;
    required string delivered_type = 2;
    optional string shelfslide = 3;
}

message MoveToWayPointTask {
    required string waypoint = 1;
}

